--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,7 @@ apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'jacoco-android'
+apply plugin: 'kotlin-kapt'
 
 android {
     compileSdkVersion 29
@@ -21,17 +22,17 @@ android {
     }
     buildTypes {
         debug {
-            manifestPlaceholders = [admob_app_id: project.property("admobAppIdDeub")]
-            buildConfigField("String", "admob_app_id", "\"{$admobAppIdDeub}\"")
+            manifestPlaceholders = [admob_app_id: project.property("admobAppIdDebug")]
+            buildConfigField("String", "admob_app_id", "\"{$admobAppIdDebug}\"")
             resValue "string", "ad_unit_id", "$admobUnitIdforDebug"
         }
         release {
             signingConfig signingConfigs.release
             minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-            manifestPlaceholders = [admob_app_id: project.property("admobAppIdRelease")]
-            buildConfigField("String", "admob_app_id", "\"{$admobAppIdRelease}\"")
-            resValue "string", "ad_unit_id", "$admobUnitIdforRelease"
+            manifestPlaceholders = [admob_app_id: project.property("admobAppIdSimInfo")]
+            buildConfigField("String", "admob_app_id", "\"{$admobAppIdSimInfo}\"")
+            resValue "string", "ad_unit_id", "$admobUnitIdSimInfoBanner"
         }
     }
 
@@ -69,14 +70,20 @@ android {
             }
         }
     }
+    dataBinding {
+        enabled = true
+    }
 }
 
 dependencies {
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.3.70"
     implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.0-beta4'
     implementation 'com.google.android.material:material:1.1.0'
+    implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
+//    kapt "androidx.lifecycle:lifecycle-compiler:2.2.0"
     // AdMob
-    implementation 'com.google.android.gms:play-services-ads:18.3.0'
+    implementation 'com.google.android.gms:play-services-ads:19.0.0'
 
     // Test周り
     testImplementation 'androidx.test:core:1.2.0'
@@ -85,7 +92,7 @@ dependencies {
     testImplementation 'androidx.test.ext:junit:1.1.1'
     testImplementation 'androidx.test.ext:truth:1.2.0'
     testImplementation 'com.google.truth:truth:0.42'
-    testImplementation 'junit:junit:4.12'
+    testImplementation 'junit:junit:4.13'
     testImplementation 'org.robolectric:robolectric:4.3.1'
 }
 repositories {
