--- a/build.gradle
+++ b/build.gradle
@@ -10,9 +10,9 @@ buildscript {
         }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:7.0.0-alpha05'
+        classpath 'com.android.tools.build:gradle:4.1.2'
 //        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.4.21"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.4.30"
 //        classpath 'com.dicedmelon.gradle:jacoco-android:0.1.4'
         classpath "com.hiya:jacoco-android:0.2"
     }
